Refactoring Teil 1